--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:image" content="thumbnail.png">
+    <meta property="og:title" content="Eloquence">
+
+    <!-- Twitter Card tags -->
+    <meta name="twitter:card" content="Thumbnail of Eloquence">
+    <meta name="twitter:image" content="thumbnail.png">
     <title>Eloquence</title>
   </head>
   <body>
